--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   "dependencies": {
     "express": "^4.13.3",
     "mongodb": "^2.1.4"
+  },
+   "devDependencies": {
+    "nodemon": "^1.8.1"
+  },
+  "engines": {
+    "node": "5.4.1"
   }
 }
